[gd_scene load_steps=19 format=2]

[ext_resource path="res://Player/Analytics.gd" type="Script" id=1]
[ext_resource path="res://Game/Game.gd" type="Script" id=2]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game/LevelLoader.gd" type="Script" id=4]
[ext_resource path="res://HUD/ScoreScreen.tscn" type="PackedScene" id=5]
[ext_resource path="res://Game/GameMode.gd" type="Script" id=6]
[ext_resource path="res://HUD/HUD.gd" type="Script" id=7]
[ext_resource path="res://HUD/InGameScreen.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/Audio/SweetnBassy_by_RDerks.mp3" type="AudioStream" id=9]
[ext_resource path="res://Game/GameAudio.gd" type="Script" id=10]
[ext_resource path="res://HUD/DebugScreen.tscn" type="PackedScene" id=11]
[ext_resource path="res://Game/PostFX.gd" type="Script" id=12]
[ext_resource path="res://HUD/SelectScreen.tscn" type="PackedScene" id=13]
[ext_resource path="res://HUD/MainMenuScreen.tscn" type="PackedScene" id=15]
[ext_resource path="res://Game/GameStates/GameState_Play_Cratebox.gd" type="Script" id=16]
[ext_resource path="res://Game/GameStates/GameState_GameOver.gd" type="Script" id=17]
[ext_resource path="res://Game/GameStates/GameState_MainMenu.gd" type="Script" id=18]

[sub_resource type="Environment" id=1]
background_mode = 4
tonemap_mode = 2
glow_enabled = true
glow_levels/1 = true
glow_levels/2 = true
glow_intensity = 0.3
glow_blend_mode = 0
glow_hdr_luminance_cap = 2.0
glow_bicubic_upscale = true

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="Analytics" type="Node" parent="."]
script = ExtResource( 1 )

[node name="HUD" type="CanvasLayer" parent="."]
pause_mode = 2
script = ExtResource( 7 )

[node name="MainMenuScreen" parent="HUD" instance=ExtResource( 15 )]

[node name="InGameScreen" parent="HUD" instance=ExtResource( 8 )]

[node name="ScoreScreen" parent="HUD" instance=ExtResource( 5 )]

[node name="DebugScreen" parent="HUD" instance=ExtResource( 11 )]

[node name="SelectScreen" parent="HUD" instance=ExtResource( 13 )]

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 1554, 146 )
initial_weapon_type = 9

[node name="LevelLoader" type="Node2D" parent="."]
script = ExtResource( 4 )
initial_level = 2

[node name="GameMode" type="Node" parent="."]
script = ExtResource( 6 )
initial_state_path = NodePath("Play")

[node name="MainMenu" type="Node" parent="GameMode"]
script = ExtResource( 18 )

[node name="Play" type="Node" parent="GameMode"]
script = ExtResource( 16 )

[node name="GameOver" type="Node" parent="GameMode"]
script = ExtResource( 17 )

[node name="PostFX" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )
script = ExtResource( 12 )

[node name="PlayerHitTween" type="Tween" parent="PostFX"]

[node name="GameAudio" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 9 )
volume_db = -9.0
autoplay = true
bus = "Music"
script = ExtResource( 10 )
